name:                hypergeomPFQ
version:             0.1.0.0
-- synopsis:
description:         Hypergeometric function of a matrix argument
homepage:            https://github.com/stla/hypergeomPFQ#readme
license:             GPL-3
author:              Stéphane Laurent
maintainer:          laurent_step@yahoo.fr
copyright:           2019 Stéphane Laurent
category:            Mathematics
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Hypergeom
                     , HypergeomU
  other-modules:       Shared
  build-depends:       base >= 4.7 && < 5
                     , array
                     , containers
  default-language:    Haskell2010
  ghc-options:         -Wall

test-suite unit-tests
  type:                 exitcode-stdio-1.0
  main-is:              Main.hs
  hs-source-dirs:       tests/
  other-modules:        Approx
  Build-Depends:        base >= 4.7 && < 5
                      , tasty
                      , tasty-hunit
                      , hypergeomPFQ
  Default-Language:     Haskell2010

source-repository head
  type:     git
  location: https://github.com/stla/hypergeomPFQ
