name:                hypergeomPFQ
version:             0.1.0.0
synopsis:            Hypergeometric function of a matrix argument
description:         Evaluation of hypergeometric functions of a matrix argument,
                     following Koev & Edelman's algorithm
homepage:            https://github.com/stla/hypergeomPFQ#readme
license:             GPL-3
author:              Stéphane Laurent
maintainer:          laurent_step@outlook.fr
copyright:           2019 Stéphane Laurent
category:            Math, Numerical
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Hypergeom
                     , HypergeomU
                     , Hypergeom2
  other-modules:       Shared
  build-depends:       base >= 4.7 && < 5
                     , array
                     , containers
                     , complex-generic
  default-language:    Haskell2010
  ghc-options:         -Wall

test-suite unit-tests
  type:                 exitcode-stdio-1.0
  main-is:              Main.hs
  hs-source-dirs:       tests/
  other-modules:        Approx
  Build-Depends:        base >= 4.7 && < 5
                      , tasty
                      , tasty-hunit
                      , hypergeomPFQ
  Default-Language:     Haskell2010

foreign-library Hypergeom
  buildable:           False
  type:                native-shared
  if os(Windows)
    options: standalone
  other-modules:       HyperGeomR
  build-depends:       base >=4.7 && < 5
                     , hypergeomPFQ
                     , inline-r
  hs-source-dirs:      src-dll
  c-sources:           StartEnd.c
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/stla/hypergeomPFQ
